# Project2026TANS

./: .gitignore  CMakeLists.txt  README.md  eventdisplay.C  full_struttura_Rar.C  main_analysis.cpp  main_rec.cpp  main_reconstruction.cpp  main_sim.cpp  main_simulation.cpp  simulation.C
classes/: CMakeLists.txt  Config.cxx  Config.h  Cylinder.cxx  Cylinder.h  LinkDef.h  MetropolisVertexReconstructor.h  MyPoint.cxx  MyPoint.h  Particle.cxx  Particle.h  Point.cxx  Point.h  SimRandom.cxx  SimRandom.h  Tracklet.cxx  Tracklet.h  VertexReconstructor.cxx  VertexReconstructor.h
config/: analysis_params.txt  fullConfig.txt  inputConfig.txt  inputConfig_DPhi.txt  kinem.root  kinem_DPhi.root  recConfig.txt  simDisplay.txt
eventdisplay/: eventdisplay.C
reconstruction/: analysis.C
reconstruction/recclasses/: Config.h  Hit.h  MetropolisVertexReconstructor.h  VertexReconstructor.h
simclasses/: Cylinder.cxx  Cylinder.h  Particle.cxx  Particle.h  Point.cxx  Point.h  SimRandom.cxx  SimRandom.h
simulation/: CMakeLists.txt  LinkDef.h  inputDistributions.root  main.cpp  main_sim.cpp  simCompiler.C  simConfig.txt  simulation.C
simulation/simclasses/: Cylinder.h  MyPoint.cxx  MyPoint.h  Particle.cxx  Particle.h  SimRandom.cxx  SimRandom.h
